--- a/basic/prometheus.deploy.yml
+++ b/basic/prometheus.deploy.yml
@@ -24,7 +24,7 @@ spec:
         args:
         - "--config.file=/etc/prometheus/prometheus.yml"
         - "--storage.tsdb.path=/prometheus"
-        - "--storage.tsdb.retention=24h"
+        - "--storage.tsdb.retention=15d"
         ports:
         - containerPort: 9090
           protocol: TCP
